[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/GameOver.gd" type="Script" id=1]
[ext_resource path="res://assets/Menu/TELAS (4).png" type="Texture" id=2]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1.64352
margin_top = -7.27154
margin_right = -1.64355
margin_bottom = -7.27155
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 629.636, 505.351 )
scale = Vector2( 1.1521, 1.1521 )
texture = ExtResource( 2 )

[node name="Re-play" type="Button" parent="."]
margin_left = 321.955
margin_top = 864.763
margin_right = 391.955
margin_bottom = 894.763
text = "Try Again"

[node name="MainMenu" type="Button" parent="."]
margin_left = 884.154
margin_top = 882.511
margin_right = 1026.15
margin_bottom = 916.511
text = "Back To Main Menu"

[node name="GameOver" type="TextEdit" parent="."]
margin_left = 576.185
margin_top = 373.372
margin_right = 669.185
margin_bottom = 408.372
text = "GAME OVER
"
[connection signal="pressed" from="Re-play" to="." method="_on_Replay_pressed"]
[connection signal="pressed" from="MainMenu" to="." method="_on_MainMenu_pressed"]
